--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,8 @@
 
     <% end %>
      <%= render 'layouts/header' %>
+     <div class="container">
     <%= yield %>
+     </div>
   </body>
 </html>
